# cjio

./: .buildinfo  .dockerignore  .gitignore  .readthedocs.yml  .travis.yml  1.json  CHANGELOG.md  DenHaag_01.json  Dockerfile  LICENSE  Pipfile  README.md  README.rst  api.html  api_tutorial_basics.html  api_tutorial_create.html  api_tutorial_ml.html  bk.json  changelog.md  cityjson.py  cjio.dockerfile  cjio.html  cjio.py  cjio_tutorial.html  cjio_tutorial.ipynb  cli.html  csolt.json  cube.json  delfs.json  design_document.ipynb  design_document.md  example.json  example2.json  genindex.html  includeme.html  index.html  info.py  main.py  models.py  modules.html  (+17 more)
.ipynb_checkpoints/: api_tutorial_basics-checkpoint.html  api_tutorial_create-checkpoint.html  api_tutorial_ml-checkpoint.html  cjio_tutorial-checkpoint.html
_modules/: index.html
_sources/: api_tutorial_create.ipynb.txt  cjio.rst.txt  cjio_tutorial.ipynb.txt  cli.rst.txt  index.rst.txt  modules.rst.txt
_static/: documentation_options.js
cjio/: .gitignore  3-20-DELFSHAVEN.json  LICENSE  README.md  __init__.py  cityjson.py  cjio.py  convert.py  errors.py  floatEncoder.py  geom_help.py  metadata.py  model.py  models.py  remove_textures.py  requirements.txt  setup.py  subset.py  tests.py  tiling.py  utils.py  validation.py
docker/: Dockerfile_Cesium  run.sh
docs/: Makefile  cjio_tutorial.ipynb  make.bat  requirements_docs.txt
example_data/: delft.json
tests/: conftest.py  subset_cmd.sh  test_api.py  test_appearances.py  test_cityjson.py  test_cityobjects.py  test_cli.py  test_convert.py  test_geometry.py  (+7 more)
(+98 files in other folders)
