[bumpversion]
current_version = 0.7.4
commit = True
tag = True

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[tool:pytest]
log_cli = true
collect_ignore = ['setup.py']
markers = 
	balazs: tests that run against Balázs' local data

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:cjio/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bumpversion:file:docs/source/conf.py]
search = release = '{current_version}'
replace = release = '{new_version}'
